fix: 🐛 Fix skipped visible note position bug

--- a/src/style.css
+++ b/src/style.css
@@ -15,4 +15,5 @@ html, body {
 
 #app {
 	height: calc(100% - 40px);
+	max-width: 600px;
 }
